# network

./: README.md
network/: db.sqlite3  package-lock.json  pyproject.toml
network/api/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
network/api/migrations/: 0001_initial.py  0002_alter_profile_following.py  0002_alter_user_first_name_alter_user_last_name.py  0003_profile_first_name_profile_last_name_and_more.py  0003_remove_profile_following_profile_followers.py  0004_profile_image_profile_isverified.py  0004_remove_profile_first_name_remove_profile_last_name.py  0005_profile_first_name_profile_last_name_and_more.py  0005_profile_joined_date.py  0006_remove_profile_followers_profile_following.py  0007_remove_profile_following_profile_followers.py  0008_alter_profile_user.py
network/frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1681494036424.mjs
network/frontend/src/: App.jsx  config.js  config.jsx  main.jsx
network/frontend/src/components/: FollowButton.jsx  LikeButton.jsx  LogoutButton.jsx  NavBar.jsx  RightBar.jsx
network/frontend/src/pages/: Followers.jsx  Following.jsx  Login.jsx  MainBody.jsx  PostForm.jsx  ProfilePage.jsx  Registration.jsx
network/network/: settings.py  urls.py
