[tool.poetry]
name = "network"
version = "0.1.0"
description = "Twitter like website"
authors = ["Dexterlente <dexter.lente18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
